Got rid of max height for experience so that it shows correctly on mobile

--- a/css/experience.css
+++ b/css/experience.css
@@ -52,7 +52,6 @@
 
 .experience-display__logo {
     max-height: 46px;
-
 }
 
 .experience-display-content {
@@ -65,7 +64,6 @@
     display: flex;
     flex-direction: column;
     overflow-y: scroll;
-    max-height: 120px;
     gap: 16px;
 }
 
